# CodeLens

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  CodeLens_需求确认文档.md  README.md  build.rs  compat.c  开发计划.md
.github/workflows/: release.yml
src/: error.rs  main.rs  models.rs
src/embedding/: downloader.rs  mod.rs  model.rs  store.rs
src/indexer/: builder.rs  mod.rs  store.rs  watcher.rs
src/mcp/: mod.rs  server.rs
src/parser/: java.rs  js.rs  mod.rs  vue.rs  xml.rs
src/scanner/: mod.rs
src/search/: bm25.rs  embedding.rs  hybrid.rs  mod.rs
