[package]
name = "codelens"
version = "0.3.3"
edition = "2021"
description = "本地代码上下文检索 MCP Server"
license = "MIT"

[dependencies]
# MCP 协议 SDK（处理 JSON-RPC + stdio 通信）
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"] }

# JSON Schema 生成（rmcp 工具参数需要）
schemars = "1"

# 代码解析（将源码转为语法树，精确提取类/方法/注解）
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# XML 解析（高性能，低内存占用）
quick-xml = "0.37"

# 统一错误处理
thiserror = "2"

# 文件监听（通过 inotify 监听文件变化，触发增量更新）
notify = "7"

# 命令行参数解析
clap = { version = "4", features = ["derive"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 结构化日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步运行时（rmcp 依赖）
tokio = { version = "1", features = ["full"] }
